# Components_Monitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
src/RenderWindow/MainRender/: render.cpp  render.h
src/app_render/: draw.h  render.cpp  render.h  theme.h
src/app_render/components_dashboard/: draw.h  sample.h
src/app_render/components_dashboard/cpu/: cpu.cpp  cpu.h
src/app_render/components_dashboard/gpu/: gpu.h  gpu_c.c  gpu_cpp.cpp
src/app_render/components_dashboard/ram/: ram.c  ram.cpp  ram.h
